# monocular-depth-estimation

./: .env.example  .gitignore  CLUSTER.md  EXPERIMENT_APPROACH.md  README.md  SCRATCH.md  pyproject.toml
docs/: BASELINE3_HANDOFF.md
notebooks/: monodepth_demo.ipynb  novel_view_synthesis.ipynb  novel_view_synthesis_messy.ipynb  visualize_dataset.ipynb
scripts/: baseline1.slurm  baseline2.slurm  baseline2_surface_head.slurm  baseline3_build_val_manifest.py  baseline3_extract_da3_features.py  baseline3_extract_features.slurm  baseline3_pseudo_label_5060.slurm  baseline3_top250_adapt.slurm  baseline3_train.slurm  baseline4_ablationA_top250_adapt.slurm  baseline4_ablationB_aug_adapt.slurm  baseline4_generate_novel_views.slurm  baseline_teacher_5060.slurm  baseline_teacher_gb10.slurm  create_submission.py  hf_scratch_sync.py  preview_bs3_pseudo_labels.py
src/: bs1_zero_shot_DA3.py  bs2_finetune_DA3.py  bs2_finetune_DA3_old.py  bs3_pseudo_label_DA3.py  bs3_pseudo_label_DA3_train.py  bs3_topk_adapt.py  bs4_ablationA_topk_adapt.py  bs4_ablationB_aug_adapt.py  bs4_generate_novel_views.py  bs_teacher_zero_shot_DA3.py  inspect_model.py  test_baseline2_checkpoint.py
utils/: create_submission.py  predict_da3_checkpoint.py  test_baseline2_checkpoint.py
