[project]
name = "monocular-depth-estimation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "depth-anything-3",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "xformers>=0.0.35; platform_machine == 'x86_64'",
    "wandb>=0.19.0",
    "peft>=0.19.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
depth-anything-3 = { git = "https://github.com/noahmeurer/depth-anything-3.git", rev = "a8b66c63423ce2cc8f0cf529017b75d5d4d6dce7" }
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
